@@ -1,3 +1,9 @@
+globus-gridftp-server (12.20-1+gt6.@distro@) @distro@; urgency=low
+
+  * exit after warning about invalid config in config.d dir
+
+ -- Globus Toolkit <support@globus.org>  Tue, 02 Jul 2019 14:21:46 -0500
+
 globus-gridftp-server (12.19-1+gt6.@distro@) @distro@; urgency=low
 
   * Add support for supported checksum advertising
